# csvsplit

./: .gitignore  README.rst  pyproject.toml
csvsplit/: cli.py
tests/: test_csvsplit.py
