[tool.poetry]
name = "csvsplit"
version = "0.1.0"
description = ""
authors = ["Jason DeCorte <jdecorte@decorteindustries.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
csvsplit = 'csvsplit.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
